complete book apis
